# CTT

./: .dockerignore  .gitignore  ARCHITECTURE.md  Brewfile  CMakeLists.txt  CTT concept.rtf  Makefile  PROJECT_TREE.md  Workflow.md  Workflow.rtf  docker-bake.hcl  docker-compose.yml  dockerignore  project_structure_current.txt  settings.json  test_bridge.py
api/proto/: ctt_messages.proto
deploy/: docker-compose-redpanda.yml  docker-compose-sumo.yml  docker-compose.domain-dhl.yml  docker-compose.yml
deploy/grafana/dashboards/: ctt-dashboard.json
deploy/grafana/datasources/: ctt-api.yaml
docs/: Workflow.txt
include/: AgentComponents.hpp  DataBridge.hpp  SimulationEngine.hpp
scripts/: diag_bat_key.py  generate_domain_compose.py  generate_m20_network.py  generate_project_tree.py  monitor_pipeline.py  observe_pipeline.py  project_structure_current.txt  test_bat_api.py  test_bat_bus.py  test_e2e.py  test_layer_communication.py  test_multi_domain.py  test_py_cpp_bridge.py  test_sme_feed.py
services/config/: bdi_config.py  belief_envelope_schema.json  domains.yaml  ports.py  self_descriptions_registry.yaml  settings.py  validate_ports.py
services/data-pipeline/fusion/: Dockerfile  ctt_messages_pb2.py  fusion_engine.py
services/data-pipeline/ingestor/: Dockerfile  gtfs_harvester.py  gtfs_loader.py  harvester (1).py  harvester.py  harvester.py.backup  harvester_mock.py  haverster.py  main.py
services/data-pipeline/ingestor/configs/: dft_traffic_flow_ingestor_config.yaml
services/data-pipeline/ingestor/tests/fixtures/: dft_traffic_flow_mock_payload.json
services/data-pipeline/interpreter/: Dockerfile  semantic_agent.py
services/l1-engine/: .dockerignore  CMakeLists.txt  Dockerfile  Dockerfile.backup  Dockerfile.l1-engine
services/l1-engine/include/: AgentComponents.h  DataBridge.h  DataBridge.hpp  PortConfig.hpp  SimulationEngine.h  SimulationEngine.hpp
services/l1-engine/src/: DataBridge.cpp  SimulationEngine.cpp  main.cpp
services/l2-bridge/: .dockerignore  Dockerfile  dashboard.py  dashboard.py.backup  orchestrator.py  requirements.txt
services/l2-orchestrator/: .dockerignore  Dockerfile  README.md  action_dispatcher.py  orchestrator.py  requirements.txt  state_aggregator.py
services/l3-analytics/: requirements.txt
services/l4-spatial/: Dockerfile  README.md  flecs_sumo_bridge.py  osm_importer.py  requirements.txt  sumo_bridge.py
services/l5-macro/: Dockerfile  audit_logger.py  federation_bridge.py  requirements.txt
services/l6-gaiax/: Dockerfile  README.md  edc-deployment.yaml  edc_gateway.py  gaiax_self_description_beis (1).json  gaiax_self_description_env_agency.json  policy_enforcer.py  requirements.txt  self_description.json
services/l6-gaiax/self-descriptions/: gaiax_self_description_dhl_express.json
services/l7-kg/: Dockerfile  README.md  abdt_agent_cache.py  abdt_agent_cache_v2.py  bdi_engine.py  coalition_engine.py  dockerignore  kg_bridge.py  learn_mod.py  requirements.txt  sig_compressor.py  ssn_schema.ttl
services/l7-kg/include/: ssn_experience_component.h
src/: DataBridge.cpp  SimulationEngine.cpp  main.cpp
